--- a/_config.yml
+++ b/_config.yml
@@ -39,8 +39,8 @@ baseurl: "/college-notes" # the subpath of your site, e.g. "/blog".
 # Github and twitter are optional:
 minima:
   social_links:
-    twitter: fastdotai
-    github: tonyhieu
+    - { platform: github,  user_url: "https://github.com/tonyhieu" }
+    - { platform: twitter, user_url: "https://twitter.com/" }
 
 # Set this to true to get LaTeX math equation support
 use_math: 
