--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ minima:
     - { platform: twitter, user_url: "https://twitter.com/" }
 
 # Set this to true to get LaTeX math equation support
-use_math: 
+use_math: true
 
 # Set this to true to display the summary of your blog post under your title on the Home page.
 show_description: true
